--- a/portfolio.css
+++ b/portfolio.css
@@ -14,13 +14,10 @@ a {
 .intro {
   font-size: 1.2rem !important;
 }
-a ::hover {
+a:hover {
   color: white !important;
 }
-.n {
-  color: black !important;
-  font-size: 1.1rem;
-}
+
 .navbar {
   text-transform: uppercase;
   font-size: 14px;
@@ -28,12 +25,12 @@ a ::hover {
   letter-spacing: 0.2rem;
   background: #b0b8b4ff;
   opacity: 100%;
-  padding: 20px 0px;
+  padding: 2px 0px;
 }
 .navbar-dark .container-fluid .navbar-nav .nav-link {
   color: white;
   padding-left: 20px;
-  margin: 10px;
+  margin: 5px;
   text-transform: uppercase;
 }
 .navbar-dark .container-fluid .navbar-nav .nav-link.active,
@@ -257,13 +254,16 @@ a ::hover {
   color: black;
 }
 .icon:hover {
-  color: white;
-  font-size: 1.5em;
+  color: white !important;
+  /* font-size: 1.5em; */
   text-decoration: none;
   font-weight: bold;
   cursor: pointer;
 }
-
+.n {
+  color: black !important;
+  font-size: 1.1rem;
+}
 /* @media (max-width:720px){
     .profile{
         height:300px;
